# mailbrew-notes

./: .gitignore
backend/: manage.py  pyproject.toml  requirements.txt
backend/mailbrew_notes/: asgi.py  settings.py  urls.py  wsgi.py
backend/notes/: models.py  serializers.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py  0002_auto_20201113_0827.py  0003_auto_20201113_1424.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Main.js
